--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
 				
 			</tr>
 				<td style="border: 1px solid;">
-				Name of <br/> Examination </td>
+				Name of <br/> Examination tut tut</td>
 				<td style="border: 1px solid;">
 				Major </td>
 				<td style="border: 1px solid;">
