--- a/education.html
+++ b/education.html
@@ -22,18 +22,18 @@
 			<tr style="text-align: center;">
 				
 			</tr>
-				<td style="border: 1px solid;">
-				Name of <br/> Examination tut tut</td>
-				<td style="border: 1px solid;">
-				Major </td>
+				<th style="border: 1px solid;">
+				Name of <br/> Examination </th>
+				<th style="border: 1px solid;">
+				Major </th>
 				<td style="border: 1px solid;">
                 Course </br> Duration </td>
-                <td style="border: 1px solid;">
-				Year Of </br> Passing </td>
-				<td style="border: 1px solid;">
-				Board/University </td>
-				<td style="border: 1px solid;">
-				GPA/CGPA </td>
+                <th style="border: 1px solid;">
+				Year Of </br> Passing </th>
+				<th style="border: 1px solid;">
+				Board/University </th>
+				<th style="border: 1px solid;">
+				GPA/CGPA </th>
 
 			</tr>
 
