--- a/education.html
+++ b/education.html
@@ -6,58 +6,25 @@
 <body>
 
 	<p>
-		
-		
-	</p>
-
-	<p>
 		<p>
-		<table>
 
-            <caption style="color:red;
-                    font-style:italic;
-                    text-decoration:underline">
-       Academic data. </caption>
-            <table style="border: 1px solid;">
-			<tr style="text-align: center;">
-				
-			</tr>
-				<th style="border: 1px solid;">
-				Name of <br/> Examination </th>
-				<th style="border: 1px solid;">
-				Major </th>
-				<td style="border: 1px solid;">
-                Course </br> Duration </td>
-                <th style="border: 1px solid;">
-				Year Of </br> Passing </th>
-				<th style="border: 1px solid;">
-				Board/University </th>
-				<th style="border: 1px solid;">
-				GPA/CGPA </th>
+           <b>Educational Qualification:</b> <br/>
+ <br/>
+ <table style="border: 1px solid;">
 
-			</tr>
-
-			<table style="border: 1px solid;">
-
-			<tr style="text-align: center;">
-				
-				<td style="border: 1px solid;">
-                SSC </td>
-				<td style="border: 1px solid;">
-				Science </td>
-				<td style="border: 1px solid;">
-				2 years </td>
-				<td style="border: 1px solid;">
-				2012 </td>
-				<td style="border: 1px solid;">
-				Comilla </td>
-				<td style="border: 1px solid;">
-				4.94 </td>
-
-			</tr>
-
-			
-		</table>
+    <tr>
+      <th> &nbsp; Name of the Examination &nbsp;</th> <th> &nbsp; Major &nbsp; </th> <th> &nbsp; Course Duration &nbsp; </th>
+	  <th> &nbsp; Year of Passing &nbsp; </th> <th> &nbsp; Board &nbsp; </th> <th> &nbsp; GPA &nbsp; </th>
+    </tr>
+    <tr>
+      <td style="border: 1px solid;"> &nbsp; SSC &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Science &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 2 Y &nbsp; </td> 
+	  <td style="border: 1px solid;"> &nbsp; 2013 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Dhaka &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 4.75 &nbsp; </td>
+    </tr>
+    <tr>
+      <td style="border: 1px solid;"> &nbsp; HSC &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Science &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 2 Y &nbsp; </td>
+	  <td style="border: 1px solid;"> &nbsp; 2015 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Dhaka &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 5.00 &nbsp; </td>
+    </tr>
+</table>
 
 		<p>
 			<H2>Ramchandrapur R.K High School (2006-2012)</h2>
