--- a/education.html
+++ b/education.html
@@ -18,11 +18,11 @@
     </tr>
     <tr>
       <td style="border: 1px solid;"> &nbsp; SSC &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Science &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 2 Y &nbsp; </td> 
-	  <td style="border: 1px solid;"> &nbsp; 2013 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Dhaka &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 4.75 &nbsp; </td>
+	  <td style="border: 1px solid;"> &nbsp; 2013 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Comilla &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 4.75 &nbsp; </td>
     </tr>
     <tr>
       <td style="border: 1px solid;"> &nbsp; HSC &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Science &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 2 Y &nbsp; </td>
-	  <td style="border: 1px solid;"> &nbsp; 2015 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Dhaka &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 5.00 &nbsp; </td>
+	  <td style="border: 1px solid;"> &nbsp; 2015 &nbsp; </td> <td style="border: 1px solid;"> &nbsp; Comilla &nbsp; </td> <td style="border: 1px solid;"> &nbsp; 5.00 &nbsp; </td>
     </tr>
 </table>
 
